# single-view-autocalib

./: .gitmodules  LICENSE  README.md  autocalib.m  autocalib_test.m  cfg_autocalib.m  init.m  render_calib.m
features/: get_arcs.m  get_image.m  get_rgns.m
features/+ARC/: extract.m  get_from_contour_DP.m
features/+CIRCLE/: fit.m  fit_taubin.m
features/+COVDET/: AffPtToDistinctAffPt.m  KmPts2.m  split_reflect.m
features/+DR/: break_reflections.m  filter_features.m  get.m  group_desc.m  group_reflections.m  keep_only_valid.m  label.m  limit_drs.m  limit_group_size.m  rm_dups.m  rm_singletons.m
features/+EDGE/: connect.m  dp_simplify.m  extract.m  filter.m
features/+LAF/: MserToLaf.m
features/+MEAS/: normalize.m  unnormalize.m
features/+MSER/: Extrema.m  apply_T.m  draw.m
features/+SIFT/: AffPtToSift.m  sift_to_rootsift.m
features/db/: CidCache.m  KeyValContourDb.m  KeyValDb.m  read_img.m
features/helpers/: CfgBase.m  Gen.m  Img.m  SysCfg.m  affpatch.mexa64  combine_dr.m  extract.m  extrema.mexa64  mexlafs.mexa64
features/helpers/edgeSubPix/: CMakeLists.txt  Canny.cpp  Canny.h  LICENSE  build.sh  main.cpp
helpers/: MapNested.m  cmp_splitapply.m  display_error.m  fullscreen.m  label_to_cspond.m  make_tmp_dir.m  mnrnd_without_repeat.m  msplitapply.m  recombine.m  vstack.m
helpers/HalfVectorization/: README.txt
ransac/: HybridRansac.m  HybridSampler.m  LabelSampler.m  ManhattanHybridPrinter.m
ransac/helpers/: Cs.m  CspondCs.m  LabelingCs.m  calc_pmap.m  calc_xfer_err.m  p1p_ct_to_scale.m
solvers/: init_solvers.m  uv_to_fR.m
(+54 files in other folders)
